# flipscore

./: .env.example  .gitignore  landing.html  pyproject.toml  requirements.txt  start.sh  supabase_schema.sql
backend/: config.py  main.py
backend/api/routes/: evaluate.py  image_evaluate.py
backend/auth/: dependencies.py  supabase_client.py
backend/data/: reference_prices.json
backend/models/: schemas.py
backend/services/: claude_client.py  evaluator.py  gemini_client.py  groq_client.py  image_processor.py  price_client.py  vision_client.py
frontend/: app.py
scripts/: check_gemini_models.py  check_groq_models.py  test_gemini_search.py  test_gemini_search_v2.py  test_price_client.py
tests/: test_mock_eval.py
